@@ -6,6 +6,7 @@ OSM add listing page JS error - FIXED
 Autozoom not working for single marker on the map - FIXED
 Export button on FireFox causes page refresh which means no access to CSV - FIXED
 We now add a uncategorized category on install so you can go straight from the install wizard to add a new post - ADDED
+Changing CPT name does not change taxonomies names - FIXED
 
 v2.0.0.3-beta
 Shortcode builder button added to pages/posts - ADDED
